test/testdata/classes/inheritance/super_missing_property_error.lox
class Superclass {}

class Subclass < Superclass {
  method() {
    super.method();
  }
}

var subclass = Subclass();
subclass.method(); // error: 'Subclass' object has no property 'method'
